--- a/css-grid.html
+++ b/css-grid.html
@@ -6,19 +6,26 @@
 	<style>
 		.wrapper{
 			width:1200px;
-			margin:0 auto;
+			margin:30px auto;
 			border:1px solid #ddd;
 			display: grid;
+			 /* 创建两行 */
   		grid-template-rows: 200px 200px;   
   		/*grid-auto-flow: row; 
   		grid-template-columns: 1fr; 
   		grid-template-rows: auto; */
+			/* 子网格之间的间距 */
   		grid-gap: 20px;
+		}
+		.item{
+			color:#fff;
+			font-size:50px;
+			text-align:center;
 		}
 		.item-a{
 			background-color:#f20ad0;
 			grid-row: 1 / 3; 
-			grid-column: 1 / 2;
+			grid-column: 1 / 3;
 		}
 		.item-b{   
 			background-color:#d2cad0;
@@ -27,13 +34,13 @@
    	}
 		.item-c{   
 			background-color:#c23af0;
-			grid-row: 1 / 2; 
-			grid-column: 2 / 3;   
+			grid-row: 2 / 3; 
+			grid-column: 3 / 5;   
 		}
 		.item-d{   
 			background-color:#3300de;
-			grid-row: 2 / 3; 
-			grid-column: 2 / 3;
+			grid-row: 1 / 2; 
+			grid-column: 4 / 6;
 		}
 		.item-e{   
 			background-color:#00ff28;
@@ -42,9 +49,13 @@
 		}
 		.item-f{   
 			background-color:#f0ed92;
+			grid-row: 1 / 3; 
+			grid-column: 6 / 7;
 		} 
 		.item-g{   
 			background-color:#3abbff;
+			grid-row: 1 / 2; 
+			grid-column: 7 / 8;
 		}  
 		.item-l{
 			
@@ -58,7 +69,6 @@
 	</style>
 </head>
 <body>
-	<p>grid 属性已经被支持很久了，却一直没有用过。今天工作上刚好遇到，一个布局，想来想去只有 grid 可以胜任。记下来以供将来回顾。</p>
 	<div class="wrapper">
 		<div class="item item-a item-l">1</div>
 		<div class="item item-b item-s">2</div>
@@ -67,6 +77,9 @@
 		<div class="item item-e item-s">5</div>
 		<div class="item item-f item-s">6</div>
 		<div class="item item-g item-m">7</div>
+	</div>
+	<div>
+		贴个网址吧：<a href='https://segmentfault.com/a/1190000012889793#articleHeader2'>CSS Grid 系列(上)-Grid布局完整指南</a>
 	</div>
 </body>
 </html>
