--- a/css-grid.html
+++ b/css-grid.html
@@ -79,6 +79,32 @@
 		<div class="item item-g item-m">7</div>
 	</div>
 	<div>
+	<p>Grid Container 的全部属性 <br/>
+			display<br/>
+			grid-template-columns<br/>
+			grid-template-rows <br/>
+			grid-template-areas <br/>
+			grid-template <br/>
+			grid-column-gap <br/>
+			grid-row-gap<br/>
+			grid-gap <br/>
+			justify-items <br/>
+			align-items <br/>
+			justify-content <br/>
+			align-content <br/>
+			grid-auto-columns <br/>
+			grid-auto-rows <br/>
+			grid-auto-flow grid</p>
+			<p>Grid Items 的全部属性 <br/>
+				grid-column-start <br/>
+				grid-column-end <br/>
+				grid-row-start <br/>
+				grid-row-end <br/>
+				grid-column <br/>
+				grid-row <br/>
+				grid-area <br/>
+				justify-self<br/>
+				align-self</p>
 		贴个网址吧：<a href='https://segmentfault.com/a/1190000012889793#articleHeader2'>CSS Grid 系列(上)-Grid布局完整指南</a>
 	</div>
 </body>
